tests/neg/i7013.scala
import quoted._

def foo() with QuoteContext = {
  class C
  '[C] // error
}
